# ip-manager

./: .gitignore  Cargo.toml  README.md  settings.default.toml
src/: errors.rs  ip.rs  ip_message.json  lib.rs  main.rs  settings.rs
src/json/: create_new_message.json  empty_query_message.json  ip_message.json  list_message.json  not_found_message.json
src/slack/: dialog.rs  message.rs  mod.rs  submission.rs
src/slack/json/: add_port_dialog.json  create_new_message.json  edit_description_dialog.json  edit_dialog.json  ip_message.json  list_message.json  list_message_with_no_button.json
