[package]
name = "ip-manager"
version = "0.1.0"
authors = ["pbzweihander <sd852456@naver.com>"]

[dependencies]
error-chain = "0.11"
reqwest = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
config = "0.8"
lazy_static = "1.0"
toml = "0.4"
tiny_http = "0.5"
serde_urlencoded = "0.5"
regex = "0.2"
